[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
actix-web = "4"
rust-argon2 = "1.0"
rand = "0.8.5"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres"] }
